fixed email overlapping container in my contact page for mobile version

--- a/style.css
+++ b/style.css
@@ -222,7 +222,7 @@ margin: auto;
 
 .contact-footer .footer-center p {
   display: inline-block;
-  font-size: 23px;
+  font-size: 20px;
   vertical-align: middle;
   margin: 0;
 }
